--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -74,6 +74,11 @@
                                                         <action selector="back:" destination="eba-Pz-70E" id="C0G-Pr-Zmm"/>
                                                     </connections>
                                                 </barButtonItem>
+                                                <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="Pa5-pj-jxz">
+                                                    <connections>
+                                                        <action selector="refreshView:" destination="eba-Pz-70E" id="jy8-iA-v9Y"/>
+                                                    </connections>
+                                                </barButtonItem>
                                             </navigationItem>
                                         </items>
                                     </navigationBar>
@@ -83,7 +88,7 @@
                                             <constraint firstAttribute="height" constant="170" id="UaZ-rX-g8a"/>
                                         </constraints>
                                     </mapView>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7YS-8t-2Nn" customClass="PhotoViewCollection" customModule="VirtualTourist" customModuleProvider="target">
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7YS-8t-2Nn">
                                         <rect key="frame" x="0.0" y="220" width="600" height="380"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xt6-vi-d1t">
@@ -93,7 +98,7 @@
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="b0t-hK-qFh">
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="b0t-hK-qFh" customClass="PhotoCellCVC" customModule="VirtualTourist" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="137" height="120"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -109,15 +114,12 @@
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="3oi-FY-UoG" secondAttribute="bottom" id="2Uy-ZR-eZi"/>
                                                     <constraint firstAttribute="trailingMargin" secondItem="3oi-FY-UoG" secondAttribute="trailing" constant="-8" id="avQ-xN-mdc"/>
-                                                    <constraint firstItem="3oi-FY-UoG" firstAttribute="bottom" secondItem="b0t-hK-qFh" secondAttribute="bottomMargin" id="cpz-ui-EYE"/>
                                                     <constraint firstItem="3oi-FY-UoG" firstAttribute="top" secondItem="b0t-hK-qFh" secondAttribute="topMargin" constant="-8" id="cwc-Xz-gJt"/>
                                                     <constraint firstItem="3oi-FY-UoG" firstAttribute="leading" secondItem="b0t-hK-qFh" secondAttribute="leadingMargin" constant="-8" id="qhf-mM-Xcu"/>
                                                 </constraints>
-                                                <variation key="default">
-                                                    <mask key="constraints">
-                                                        <exclude reference="cpz-ui-EYE"/>
-                                                    </mask>
-                                                </variation>
+                                                <connections>
+                                                    <outlet property="photoImage" destination="3oi-FY-UoG" id="apL-s4-d3P"/>
+                                                </connections>
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
@@ -136,8 +138,9 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="flowLayout" destination="Xt6-vi-d1t" id="xj2-LH-4LZ"/>
                         <outlet property="mapView" destination="ZEF-Qw-0nO" id="V8q-K0-LNf"/>
-                        <outlet property="photoCollection" destination="7YS-8t-2Nn" id="hp9-rv-AsB"/>
+                        <outlet property="photoCollection" destination="7YS-8t-2Nn" id="3Ht-Nf-SZ4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q5h-D3-85w" userLabel="First Responder" sceneMemberID="firstResponder"/>
